force-app/main/default/objects/Volunteer_Recurrence_Schedule__c/Volunteer_Recurrence_Schedule__c.object-meta.xml
<CustomObject>
    <label>Volunteer Recurrence Schedule</label>
    <nameField>
        <displayFormat>VRS-{00000}</displayFormat>
        <label>VRS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Recurrence Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>