force-app/main/default/objects/Volunteer_Recurrence_Schedule__c/fields/Schedule_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_End_Date__c</fullName>
    <label>Schedule End Date</label>
    <type>Date</type>
</CustomField>