force-app/main/default/objects/Volunteer_Recurrence_Schedule__c/fields/Schedule_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Start_Date_Time__c</fullName>
    <label>Schedule Start Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>