force-app/main/default/objects/Volunteer_Recurrence_Schedule__c/fields/Volunteer_Hours_Status__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Status__c</fullName>
    <inlineHelpText>Select the default status for Volunteer Hours records created by this Volunteer Recurrence Schedule.</inlineHelpText>
    <label>Volunteer Hours Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Volunteer_Hours_Status</valueSetName>
    </valueSet>
</CustomField>