force-app/main/default/objects/Volunteer_Recurrence_Schedule__c/fields/Volunteer_Job__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Job</label>
    <referenceTo>Volunteer_Job__c</referenceTo>
    <relationshipLabel>Volunteer Recurrence Schedules</relationshipLabel>
    <relationshipName>Volunteer_Recurrence_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>